--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -1,19 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item
-        android:id="@+id/vendorsFragment"
-        android:icon="@drawable/ic_home"
-        android:title="Home"/>
-    <item
-        android:id="@+id/shopFragment"
-        android:icon="@drawable/ic_shop"
-        android:title="Shop"/>
-    <item
-        android:id="@+id/history"
-        android:icon="@drawable/ic_history"
-        android:title="History"/>
-    <item
-        android:id="@+id/settings"
-        android:icon="@drawable/ic_settings"
-        android:title="Settings"/>
+    <group android:checkableBehavior="single">
+        <item
+            android:id="@+id/vendorsFragment"
+            android:icon="@drawable/ic_home"
+            android:title="Home"/>
+        <item
+            android:id="@+id/shopFragment"
+            android:icon="@drawable/ic_shop"
+            android:title="Shop"/>
+        <item
+            android:id="@+id/history"
+            android:icon="@drawable/ic_history"
+            android:title="History"/>
+        <item
+            android:id="@+id/events"
+            android:icon="@drawable/ic_event"
+            android:title="Events"/>
+        <item
+            android:id="@+id/videos"
+            android:icon="@drawable/ic_video"
+            android:title="Videos"/>
+        <item
+            android:id="@+id/settings"
+            android:icon="@drawable/ic_settings"
+            android:title="Settings"/>
+    </group>
+
+    <item android:title="Technology">
+        <menu>
+            <group android:checkableBehavior="single">
+                <item android:title="Growth track"
+                    android:icon="@drawable/ic_graph"
+                    android:id="@+id/track"/>
+
+                <item android:id="@+id/knowledge"
+                    android:icon="@drawable/ic_book"
+                    android:title="Knowledge Base"/>
+
+                <item android:title="Shipping"
+                    android:icon="@drawable/ic_shipping"
+                    android:id="@+id/shipping"/>
+            </group>
+        </menu>
+    </item>
+
+    <item android:title="Profile">
+        <menu>
+            <group android:checkableBehavior="single">
+                <item android:id="@+id/share"
+                    android:icon="@drawable/ic_share"
+                    android:title="Share"/>
+                <item android:title="Logout"
+                    android:icon="@drawable/ic_reply"
+                    android:id="@+id/logout"/>
+            </group>
+        </menu>
+    </item>
 </menu>
