--- a/app/src/main/res/navigation/bottom_graph.xml
+++ b/app/src/main/res/navigation/bottom_graph.xml
@@ -18,7 +18,11 @@
         android:id="@+id/vendorInfoFragment"
         android:name="com.example.newsapi.fragments.VendorInfoFragment"
         android:label="fragment_vendor_info"
-        tools:layout="@layout/fragment_vendor_info" />
+        tools:layout="@layout/fragment_vendor_info" >
+        <action
+            android:id="@+id/action_vendorInfoFragment_to_vendorsFragment"
+            app:destination="@id/vendorsFragment" />
+    </fragment>
     <fragment
         android:id="@+id/shopFragment"
         android:name="com.example.newsapi.fragments.ShopFragment"
@@ -32,5 +36,9 @@
         android:id="@+id/treeFragment"
         android:name="com.example.newsapi.fragments.TreeFragment"
         android:label="fragment_tree"
-        tools:layout="@layout/fragment_tree" />
+        tools:layout="@layout/fragment_tree" >
+        <action
+            android:id="@+id/action_treeFragment_to_shopFragment"
+            app:destination="@id/shopFragment" />
+    </fragment>
 </navigation>
