--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -57,7 +57,7 @@ tools:context=".fragments.MainFragment">
         android:textSize="18sp"
         android:layout_marginBottom="2dp"
         android:layout_marginEnd="2dp"
-        app:layout_constraintBottom_toTopOf="@id/search1"
+        app:layout_constraintBottom_toTopOf="@id/fragmentContainerView2"
         app:layout_constraintEnd_toStartOf="@id/image2"
         app:layout_constraintTop_toBottomOf="@id/vendors"
         app:layout_constraintStart_toStartOf="@id/vendors"
@@ -74,17 +74,7 @@ tools:context=".fragments.MainFragment">
         app:layout_constraintStart_toStartOf="parent"
 
         app:layout_constraintBottom_toBottomOf="@id/vendors" />
-    <SearchView
-        android:id="@+id/search1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/light_green"
-        android:layout_margin="8dp"
-        app:layout_constraintTop_toBottomOf="@id/slogan"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
 
-        />
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fragmentContainerView2"
@@ -93,7 +83,7 @@ tools:context=".fragments.MainFragment">
         android:layout_height="0dp"
         app:defaultNavHost="true"
         app:navGraph="@navigation/bottom_graph"
-        app:layout_constraintTop_toBottomOf="@id/search1"
+        app:layout_constraintTop_toBottomOf="@id/slogan"
         app:layout_constraintBottom_toBottomOf="parent"/>
 
 
