--- a/app/src/main/res/layout/fragment_tree.xml
+++ b/app/src/main/res/layout/fragment_tree.xml
@@ -1,207 +1,232 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".fragments.TreeFragment">
+    android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/tree_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Leyland Cypress"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/cont1"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/cont1"
+    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/tree_name">
+        tools:context=".fragments.TreeFragment">
+
+
         <TextView
-            android:id="@+id/desc"
+            android:id="@+id/tree_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Description"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"/>
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <ImageView
-        android:id="@+id/image"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:src="@drawable/download"
-        android:adjustViewBounds="true"
-        app:layout_constraintTop_toBottomOf="@id/cont1"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"/>
-
-    <TextView
-        android:id="@+id/money"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:text="As low as KES 20"
-        app:layout_constraintTop_toBottomOf="@id/image"
-        app:layout_constraintStart_toStartOf="@id/image"/>
-    <TextView
-        android:id="@+id/size"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="4 - 5 Foot : In stock"
-        app:layout_constraintTop_toBottomOf="@id/money"
-        app:layout_constraintStart_toStartOf="@id/money"/>
-    <TextView
-        android:id="@+id/size1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="5 - 6 Foot : In stock"
-        app:layout_constraintTop_toBottomOf="@id/size"
-        app:layout_constraintStart_toStartOf="@id/size"/>
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/quantity"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        app:layout_constraintTop_toBottomOf="@id/size1"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@id/submit">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:hint="Enter quantity"
-            android:inputType="number"/>
-
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <ImageView
-        android:id="@+id/submit"
-        android:layout_width="80dp"
-        android:layout_height="0dp"
-        android:src="@drawable/ic_arrow"
-        android:layout_marginStart="12dp"
-        android:layout_marginEnd="12dp"
-        android:background="@color/light_green"
-        app:layout_constraintTop_toTopOf="@id/quantity"
-        app:layout_constraintStart_toEndOf="@id/quantity"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="@id/quantity"/>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/cont2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/quantity">
-        <TextView
-            android:id="@+id/plant_details"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Plant Details"
+            android:layout_marginTop="4dp"
+            android:fontFamily="@font/baloo"
+            android:text="Leyland Cypress"
+            android:visibility="gone"
+            android:textColor="@color/dark_green"
+            android:textSize="20sp"
             android:textStyle="bold"
-            android:textSize="25sp"
-            android:layout_margin="20dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"/>
-        <TextView
-            android:id="@+id/species"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="20sp"
-            android:text="Species: Cupressocyparis leylandii"
-            app:layout_constraintTop_toBottomOf="@id/plant_details"
-            app:layout_constraintStart_toStartOf="@id/plant_details"/>
-        <TextView
-            android:id="@+id/soil_conditions"
-            android:layout_width="wrap_content"
-            android:text="Soil conditions: Adaptable"
-            android:textSize="20sp"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/species"
-            app:layout_constraintStart_toStartOf="@id/species"/>
-        <TextView
-            android:id="@+id/drought_tolerance"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Drought Tolerance: Good"
-            android:textSize="20sp"
-            app:layout_constraintTop_toBottomOf="@id/soil_conditions"
-            app:layout_constraintStart_toStartOf="@id/soil_conditions"/>
-        <TextView
-            android:id="@+id/mature_height"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Mature Height: 40 - 60 ft"
-            android:layout_marginBottom="12dp"
-            android:textSize="20sp"
-            app:layout_constraintBottom_toTopOf="@id/buy"
-            app:layout_constraintTop_toBottomOf="@id/drought_tolerance"
-            app:layout_constraintStart_toStartOf="@id/drought_tolerance"/>
-
-        <TextView
-            android:id="@+id/buy"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Buy"
-            android:textSize="20sp"
-            android:layout_marginEnd="12dp"
-            android:drawableTint="@color/light_green"
-            app:layout_constraintTop_toBottomOf="@id/mature_height"
-            app:layout_constraintStart_toStartOf="@id/mature_height"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/or"
-            app:drawableStartCompat="@drawable/ic_shop" />
-        <TextView
-            android:id="@+id/or"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text=" | "
-            android:textStyle="bold"
-            app:layout_constraintStart_toEndOf="@id/buy"
-            app:layout_constraintTop_toTopOf="@id/buy"
-            app:layout_constraintEnd_toStartOf="@id/add_to_cart"
-            app:layout_constraintBottom_toBottomOf="@id/buy"/>
-
-        <TextView
-            android:id="@+id/add_to_cart"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:drawableTint="@color/light_green"
-            android:text="Add to cart"
-            android:textSize="20sp"
-            android:layout_marginStart="8dp"
-            app:layout_constraintTop_toTopOf="@id/buy"
-            app:layout_constraintStart_toEndOf="@id/or"
-            app:layout_constraintEnd_toStartOf="@id/or1"
-            app:layout_constraintBottom_toBottomOf="@id/buy"
-            app:drawableStartCompat="@drawable/ic_shop" />
-        <TextView
-            android:id="@+id/or1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text=" | "
-            android:textStyle="bold"
-            app:layout_constraintStart_toEndOf="@id/add_to_cart"
-            app:layout_constraintTop_toTopOf="@id/add_to_cart"
-            app:layout_constraintEnd_toStartOf="@id/shipping"
-            app:layout_constraintBottom_toBottomOf="@id/add_to_cart"/>
-
-        <TextView
-            android:id="@+id/shipping"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="shipment"
-            android:drawableTint="@color/light_green"
-            app:layout_constraintTop_toTopOf="@id/add_to_cart"
-            app:layout_constraintStart_toEndOf="@id/or1"
-            app:layout_constraintBottom_toBottomOf="@id/add_to_cart"
+            app:layout_constraintBottom_toTopOf="@id/image"
             app:layout_constraintEnd_toEndOf="parent"
-            app:drawableStartCompat="@drawable/ic_shipping" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/image"
+            android:layout_width="0dp"
+            android:layout_height="250dp"
+            android:layout_marginTop="12dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/download"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tree_name" />
+
+        <TextView
+            android:id="@+id/money"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:text="As low as KES 20"
+            android:textColor="@color/black"
+            android:textSize="20sp"
+            app:layout_constraintStart_toStartOf="@id/image"
+            app:layout_constraintTop_toBottomOf="@id/image" />
+
+        <TextView
+            android:id="@+id/size"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="4 - 5 Foot : In stock"
+            android:textColor="@color/black"
+            android:textSize="20sp"
+            app:layout_constraintStart_toStartOf="@id/money"
+            app:layout_constraintTop_toBottomOf="@id/money" />
+
+        <TextView
+            android:id="@+id/size1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="5 - 6 Foot : In stock"
+            android:textColor="@color/black"
+            android:textSize="20sp"
+            app:layout_constraintStart_toStartOf="@id/size"
+            app:layout_constraintTop_toBottomOf="@id/size" />
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/quantity"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintLeft_toLeftOf="@id/money"
+            app:layout_constraintRight_toLeftOf="@id/submit"
+            app:layout_constraintTop_toBottomOf="@id/size1">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:hint="Enter quantity"
+                android:inputType="number" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.imageview.ShapeableImageView
+            android:id="@+id/submit"
+            android:layout_width="80dp"
+            android:layout_height="0dp"
+            android:layout_marginStart="12dp"
+            android:layout_marginEnd="12dp"
+            android:background="@color/dark_green"
+            android:src="@drawable/ic_arrow"
+            app:layout_constraintBottom_toBottomOf="@id/quantity"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/quantity"
+            app:layout_constraintTop_toTopOf="@id/quantity" />
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/cont2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/quantity">
+
+            <TextView
+                android:id="@+id/plant_details"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="20dp"
+                android:text="Plant Details"
+                android:textColor="@color/dark_green"
+                android:textSize="25sp"
+                android:textStyle="bold"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/species"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Species: Cupressocyparis leylandii"
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                app:layout_constraintStart_toStartOf="@id/plant_details"
+                app:layout_constraintTop_toBottomOf="@id/plant_details" />
+
+            <TextView
+                android:id="@+id/soil_conditions"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Soil conditions: Adaptable"
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                app:layout_constraintStart_toStartOf="@id/species"
+                app:layout_constraintTop_toBottomOf="@id/species" />
+
+            <TextView
+                android:id="@+id/drought_tolerance"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Drought Tolerance: Good"
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                app:layout_constraintStart_toStartOf="@id/soil_conditions"
+                app:layout_constraintTop_toBottomOf="@id/soil_conditions" />
+
+            <TextView
+                android:id="@+id/mature_height"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="12dp"
+                android:text="Mature Height: 40 - 60 ft"
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                app:layout_constraintBottom_toTopOf="@id/buy"
+                app:layout_constraintStart_toStartOf="@id/drought_tolerance"
+                app:layout_constraintTop_toBottomOf="@id/drought_tolerance" />
+
+            <TextView
+                android:id="@+id/buy"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="12dp"
+                android:layout_marginBottom="4dp"
+                android:drawableTint="@color/dark_green"
+                android:text="Buy"
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                app:drawableStartCompat="@drawable/ic_shop"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/or"
+                app:layout_constraintStart_toStartOf="@id/mature_height"
+                app:layout_constraintTop_toBottomOf="@id/mature_height" />
+
+            <TextView
+                android:id="@+id/or"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=" | "
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="@id/buy"
+                app:layout_constraintEnd_toStartOf="@id/add_to_cart"
+                app:layout_constraintStart_toEndOf="@id/buy"
+                app:layout_constraintTop_toTopOf="@id/buy" />
+
+            <TextView
+                android:id="@+id/add_to_cart"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:drawableTint="@color/dark_green"
+                android:text="Add to cart"
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                app:drawableStartCompat="@drawable/ic_shop"
+                app:layout_constraintBottom_toBottomOf="@id/buy"
+                app:layout_constraintEnd_toStartOf="@id/or1"
+                app:layout_constraintStart_toEndOf="@id/or"
+                app:layout_constraintTop_toTopOf="@id/buy" />
+
+            <TextView
+                android:id="@+id/or1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=" | "
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="@id/add_to_cart"
+                app:layout_constraintEnd_toStartOf="@id/shipping"
+                app:layout_constraintStart_toEndOf="@id/add_to_cart"
+                app:layout_constraintTop_toTopOf="@id/add_to_cart" />
+
+            <TextView
+                android:id="@+id/shipping"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawableTint="@color/dark_green"
+                android:text="shipment"
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                app:drawableStartCompat="@drawable/ic_shipping"
+                app:layout_constraintBottom_toBottomOf="@id/add_to_cart"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/or1"
+                app:layout_constraintTop_toTopOf="@id/add_to_cart" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
