--- a/app/src/main/res/layout/fragment_vendor.xml
+++ b/app/src/main/res/layout/fragment_vendor.xml
@@ -134,7 +134,7 @@
             android:textSize="18sp"
             android:layout_marginStart="10dp"
             android:textStyle="bold"
-            android:textColor="@color/light_green"
+            android:textColor="@color/dark_green"
             app:layout_constraintTop_toTopOf="@id/forgot"
             app:layout_constraintLeft_toRightOf="@id/forgot"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
