--- a/app/src/main/res/navigation/bottom_graph.xml
+++ b/app/src/main/res/navigation/bottom_graph.xml
@@ -40,5 +40,8 @@
         <action
             android:id="@+id/action_treeFragment_to_shopFragment"
             app:destination="@id/shopFragment" />
+        <argument
+            android:name="tree"
+            app:argType="com.example.newsapi.models.Tree" />
     </fragment>
 </navigation>
